src/test/deca/context/invalid/expr_cast_float_to_void.deca
// Test de la règle (3.39) : on ne peut pas cast de float vers void.
{
	void var1;
	float var2;
	var1 = (void)(var2);
}

// Résultat :
//# a
